src/objects/DRDW_Budget_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Accrual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Element_Description__c</fullName>
        <label>Cost Element Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Element_Grouping__c</fullName>
        <label>Cost Element Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Element__c</fullName>
        <label>Cost Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <label>Debit/Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outsourced_Activity__c</fullName>
        <label>Outsourced Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Description__c</fullName>
        <label>PO Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Name__c</fullName>
        <label>PO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project/Idea</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipLabel>DRDW Budget Line Items</relationshipLabel>
        <relationshipName>DRDW_Budget_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(Month( Posting_Date__c ),1,&quot;1&quot;,2,&quot;1&quot;,3,&quot;1&quot;,4,&quot;2&quot;,5,&quot;2&quot;,6,&quot;2&quot;,7,&quot;3&quot;,8,&quot;3&quot;,9,&quot;3&quot;,10,&quot;4&quot;,11,&quot;4&quot;,12,&quot;4&quot;,&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>DRDW_Budget_Master__c</referenceTo>
        <relationshipLabel>DRDW Budget Line Items</relationshipLabel>
        <relationshipName>DRDW_Budget_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
   <fields>
        <fullName>Save_And_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scientist_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scientist/Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Budget_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US__c</fullName>
        <label>US$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cost_center__c</fullName>
        <formula>Related_To__r.Cost_Center__r.Name</formula>
        <label>cost center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sapid__c</fullName>
        <label>sapid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>save</label>
        <type>Checkbox</type>
    </fields>
    <label>DRDW Budget Line Item</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Budget Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Budget Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Year_check</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR((YEAR(Posting_Date__c) &gt;  YEAR(TODAY())),(YEAR(Posting_Date__c) &lt; YEAR(TODAY())-1)),true,false)</errorConditionFormula>
        <errorDisplayField>Posting_Date__c</errorDisplayField>
        <errorMessage>Please check the posting date year, cannot be greater than current year and less than previous year</errorMessage>
    </validationRules>
</CustomObject>